added restart and pause logic

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,7 @@
                 "src\\data\\ArrayModel.cpp",
                 "src\\render\\BarRenderer.cpp",
                 "src\\algorithms\\BubbleSort.cpp",
+                "src\\core\\SortController.cpp",
 
 
 
